deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  template:
    spec:
      volumes:
      - name: mediavol
        hostPath: 
          path: /home/innsh/dev/temp/media/
      - name: jellyfin-cache-vol
        persistentVolumeClaim:
          claimName: jellyfin-cache-storage
      - name: jellyfin-config-vol
        persistentVolumeClaim:
          claimName: jellyfin-config-storage          
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin
        ports: 
          - containerPort: 8096
            protocol: TCP
        volumeMounts:
          - name: mediavol
            mountPath: /media/
          - name: jellyfin-cache-vol
            mountPath: /cache
          - name: jellyfin-config-vol
            mountPath: /config
        resources:
          requests:
            memory: "250Mi"
            cpu: 250m
          limits:
            memory: "750Mi"
            cpu: 500m
        livenessProbe:
          httpGet:
            path: /health
            port: 8096
          initialDelaySeconds: 3
          periodSeconds: 10
