ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: jellyfin
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              number: 8096
